--- a/presentation.html
+++ b/presentation.html
@@ -517,7 +517,7 @@ because we and the case study authors are part of that group.</p>
 <ul>
 <li><strong>ease of use</strong></li>
 <li><strong>flexibility of learning</strong></li>
-<li><strong>level of use:</strong>
+<li><strong>levels of engagement:</strong>
 <ul>
 <li>reading</li>
 <li>interacting on the website</li>
