Fix missing html for Git content

--- a/presentation.html
+++ b/presentation.html
@@ -817,6 +817,20 @@ Python, R, and SPARQL. These setups are cached to ensure usable CI/CD
 runtimes.</p>
 </aside>
 </section>
+<section id="using-git" class="slide level2">
+<h2>Using Git</h2>
+<ul>
+<li>Basic Git usage is viable for everyone.</li>
+<li>Avoid situations where manual merging is necessary.</li>
+<li>If manual merge is necessary, provide support.</li>
+</ul>
+<aside class="notes">
+<p>Git usage for not too technically minded people.</p>
+<p>Allow editing of main branch.</p>
+<p>Try to not get into situations where manual merging is necessary.
+Support for those merges by other project members.</p>
+</aside>
+</section>
 <section id="zenodo-integration" class="slide level2">
 <h2>Zenodo Integration</h2>
 <ul>
